# soul-player

./: .dockerignore  .env.example  .env.server  .gitignore  .sqlxrc  ARTWORK_DEBUGGING_GUIDE.md  AUDIENT_EVO8_ASIO_FIX.md  AUDIO_DIAGNOSTICS.md  AUDIO_PIPELINE_ROADMAP.md  AUDIO_PIPELINE_TEST_PLAN.md  BUILD_GUIDE.md  CLAUDE.md  COMPILATION_FIXES.md  CONTRIBUTING.md  CPAL_AUDIO_IMPLEMENTATION.md  Cargo.new.toml  Cargo.old.toml  Cargo.toml  DEBUGGING_SAMPLE_RATE.md  DSP_IMPLEMENTATION_SUMMARY.md  FINAL_COMPILATION_FIXES.md  FIX_SUMMARY.md  FRONTEND_SETUP_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  MIGRATION_COMPLETED.md  MOON_CICD_SETUP.md  PHASE_1_5_1_RESAMPLING_SUMMARY.md  README.md  RELEASING.md  ROADMAP.md  SEEK_DRAG_IMPROVEMENTS.md  SESSION_SUMMARY.md  STORAGE_IMPLEMENTATION_STATUS.md  TAURI_DESKTOP_SETUP.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  THEME_SYSTEM_IMPLEMENTATION.md  UI_COMPONENTS_DESIGN.md  UI_IMPROVEMENTS_SUMMARY.md  (+6 more)
applications/desktop/src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
applications/firmware/: .gitignore  Cargo.toml  FIRMWARE.md  README.md  build.rs  partitions.csv  sdkconfig.defaults
applications/firmware/.cargo/: config.toml
applications/firmware/src/: config.rs  main.rs
applications/server/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.server-only  README.md  config.example.toml  config.toml.example
applications/server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
applications/server/tests/: api_integration_tests.rs  auth_service_tests.rs  file_storage_tests.rs  transcoding_service_tests.rs
libraries/soul-artwork/: Cargo.toml
libraries/soul-artwork/src/: error.rs  extractor.rs  lib.rs  types.rs
libraries/soul-audio/: Cargo.toml
libraries/soul-audio-desktop/: Cargo.toml
libraries/soul-audio-desktop/src/: backend.rs  device.rs  error.rs  exclusive.rs  lib.rs  output.rs  output_old.rs  playback.rs  track_loader.rs
libraries/soul-audio-desktop/tests/: audio_callback_timing_test.rs  audio_sources_integration.rs  desktop_playback_integration.rs  device_capabilities_test.rs  device_handling_test.rs  device_switching_test.rs  e2e_device_switching_docker.rs  exclusive_mode_test.rs  platform_linux_test.rs  platform_macos_test.rs  platform_windows_test.rs  playback_test.rs  queue_navigation_test.rs  resampling_chunk_gap_test.rs  resampling_integration_test.rs  run-docker-tests.ps1  run-docker-tests.sh  streaming_decoder_test.rs  testcontainers_audio.rs  testcontainers_audio_test.rs
libraries/soul-audio/benches/: resampling_benchmark.rs
libraries/soul-audio/src/: decoder.rs  dither.rs  encoder_delay.rs  error.rs  fingerprint.rs  lib.rs  metadata.rs
libraries/soul-audio/tests/: allocation_safety_test.rs  audio_pipeline_e2e_industry_test.rs  audio_pipeline_integration_test.rs  audio_quality_e2e_test.rs  audio_quality_test.rs  audio_standards_test.rs  audio_stress_test.rs  bit_perfect_e2e_test.rs  bit_perfect_test.rs  bug_hunting_test.rs  compressor_precision_test.rs  continuous_parameter_change_test.rs  convolution_precision_test.rs  convolution_test.rs  crossfeed_precision_test.rs  decoder_conformance_test.rs  decoder_e2e_test.rs  decoder_edge_cases_test.rs  decoder_integration.rs  decoder_regression_test.rs  dither_industry_standard_test.rs  dsd_quality_test.rs  dsp_e2e_test.rs  dynamics_regression_test.rs  effects_chain_e2e_test.rs  effects_integration_test.rs  encoder_delay_industry_test.rs  eq_precision_test.rs  eq_regression_test.rs  error_recovery_test.rs  foobar_audio_quality_test.rs  full_pipeline_e2e_test.rs  fuzzing_edge_cases_e2e_test.proptest-regressions  fuzzing_edge_cases_e2e_test.rs  gapless_playback_test.rs  golden_reference_test.rs  integration_test.rs  limiter_ceiling_verification_test.rs  limiter_precision_test.rs  loudness_dynamics_e2e_test.rs  (+23 more)
libraries/soul-core/: Cargo.toml
libraries/soul-core/src/: error.rs  lib.rs  storage.rs  traits.rs
libraries/soul-importer/: Cargo.toml
libraries/soul-importer/src/: copy.rs  error.rs  fuzzy.rs  importer.rs  lib.rs  library_scanner.rs  managed_import.rs  metadata.rs  paid.rs  path_template.rs  scanner.rs  types.rs  watcher.rs
libraries/soul-importer/tests/: copy_tests.rs  e2e_tests.rs  fuzzy_tests.rs  integration_tests.rs  library_scanner_tests.rs  test_helpers.rs  watcher_tests.rs
libraries/soul-loudness/: Cargo.toml
libraries/soul-loudness/src/: analyzer.rs  error.rs  headroom.rs  lib.rs  limiter.rs  normalizer.rs  replaygain.rs  tags.rs
libraries/soul-loudness/tests/: headroom_industry_standard_test.rs  integration_tests.proptest-regressions  integration_tests.rs  limiter_industry_standard_test.rs  loudness_industry_test.rs
libraries/soul-metadata/: Cargo.toml
libraries/soul-metadata/src/: error.rs  lib.rs  reader.rs  scanner.rs
libraries/soul-metadata/tests/: library_scanner.rs  metadata_integration.rs  metadata_reader.rs
libraries/soul-playback/: Cargo.toml
libraries/soul-playback/src/: crossfade.rs  error.rs  events.rs  history.rs  lib.rs  manager.rs  queue.rs  shuffle.rs  source.rs  types.rs  volume.rs
libraries/soul-playback/tests/: integration_test.rs  manager_bug_hunt_test.rs  playback_manager_e2e_test.rs  playback_pipeline_test.rs  property_test.proptest-regressions  property_test.rs  queue_integration_test.rs  start_fade_test.rs
libraries/soul-server-client/: Cargo.toml
libraries/soul-server-client/src/: auth.rs  client.rs  download.rs  error.rs  lib.rs  library.rs  types.rs  upload.rs
libraries/soul-server-client/tests/: client_tests.rs  sync_integration_test.rs
libraries/soul-storage/: Cargo.toml  README.md  build.rs  setup-tests.sh  test.db
libraries/soul-storage/.sqlx/: query-0d28c2c8faf98b4a6787bc1a10e0e9d90f92b09da2201f550338af927c708a22.json  query-19f5786d94924405210b546bdbf73a399152fd24074f4eb08b96a06825321339.json  query-28759f9aa2286f0d2b8d4723258e2e48ccc7200e9ed818b8de918e57b653384f.json  query-287bc2c7a882ac9ea08c39a8abd44849760c80e4e87d8640ff8ddcbba16847d3.json  (+59 more)
libraries/soul-storage/migrations/: 20250105000001_create_users.sql  (+43 more)
libraries/soul-sync/: Cargo.toml
(+715 files in other folders)
