[package]
name = "soul-audio-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
soul-core.workspace = true
soul-audio.workspace = true
soul-playback.workspace = true
cpal.workspace = true
thiserror.workspace = true
symphonia.workspace = true  # For streaming audio decoding
rubato = "0.15"  # Sample rate conversion
crossbeam-channel = "0.5"  # Thread-safe channels for audio thread communication
reqwest = { workspace = true, features = ["stream"] }  # For streaming from server
tokio = { workspace = true, features = ["sync"] }  # For async streaming

[dev-dependencies]
tempfile = "3.24"
rand = "0.8"

[lints.rust]
# Override workspace forbid to allow unsafe Send/Sync impls for CPAL Stream
unsafe_code = "deny"
missing_docs = "allow"
dead_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Match workspace allows
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cargo_common_metadata = "allow"
redundant_feature_names = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
needless_raw_string_hashes = "allow"
wildcard_imports = "allow"
unreadable_literal = "allow"
similar_names = "allow"
empty_line_after_doc_comments = "allow"
map_unwrap_or = "allow"
float_cmp = "allow"
uninlined_format_args = "allow"
too_many_lines = "allow"
default_trait_access = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_literal_bound = "allow"
suspicious_doc_comments = "allow"
drop_non_drop = "allow"
unnecessary_wraps = "allow"
unwrap_or_default = "allow"
field_reassign_with_default = "allow"
should_implement_trait = "allow"
needless_pass_by_value = "allow"
redundant_closure = "allow"
