[package]
name = "soul-audio-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["effects", "volume-leveling"]
effects = ["soul-playback/effects"]  # DSP effects (EQ, compressor, limiter)
volume-leveling = ["soul-playback/volume-leveling"]  # ReplayGain, headroom management
asio = ["cpal/asio"]  # Windows ASIO support (low-latency, exclusive mode)
jack = ["cpal/jack"]  # JACK audio connection kit (Linux/macOS pro audio)
r8brain = ["dep:r8brain-rs"]  # High-quality r8brain resampling (requires cmake)
docker-tests = []  # Enable Docker-based E2E tests (requires Docker Desktop)
testcontainers = []  # Enable testcontainers-based audio tests (requires Docker)

[dependencies]
soul-core.workspace = true
soul-audio.workspace = true
soul-playback.workspace = true
thiserror.workspace = true
serde = { workspace = true }

# Audio I/O
cpal = { workspace = true }

# Decoding
symphonia = { workspace = true }

# Resampling
rubato = { workspace = true }
r8brain-rs = { workspace = true, optional = true }

# DSP & Effects
dasp = { workspace = true }
fundsp = { workspace = true }
biquad = { workspace = true }

# Loudness Analysis
ebur128 = { workspace = true }

# Concurrency
crossbeam-channel = "0.5"  # Thread-safe channels for audio thread communication
tokio = { workspace = true, features = ["sync"] }  # For async streaming

# Networking (for streaming from server)
reqwest = { workspace = true, features = ["stream"] }

[dev-dependencies]
tempfile = "3.24"
rand = "0.8"
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }  # Full tokio for async tests
tokio-test = "0.4"
hound = "3.5"  # WAV file creation for tests
serde_json = "1.0"  # JSON serialization for tests
proptest = { workspace = true }  # Property-based testing for exclusive mode

[lints.rust]
# Override workspace forbid to allow unsafe Send/Sync impls for CPAL Stream
unsafe_code = "deny"
missing_docs = "allow"
dead_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Match workspace allows
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cargo_common_metadata = "allow"
redundant_feature_names = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
needless_raw_string_hashes = "allow"
wildcard_imports = "allow"
unreadable_literal = "allow"
similar_names = "allow"
empty_line_after_doc_comments = "allow"
map_unwrap_or = "allow"
float_cmp = "allow"
uninlined_format_args = "allow"
too_many_lines = "allow"
default_trait_access = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_literal_bound = "allow"
suspicious_doc_comments = "allow"
drop_non_drop = "allow"
unnecessary_wraps = "allow"
unwrap_or_default = "allow"
field_reassign_with_default = "allow"
should_implement_trait = "allow"
needless_pass_by_value = "allow"
redundant_closure = "allow"
