[package]
name = "soul-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
sqlx = { workspace = true, optional = true }

[features]
sqlx-support = ["sqlx"]

[lints]
workspace = true
