[package]
name = "soul-playback"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-agnostic playback management for Soul Player"

[lints]
workspace = true

[dependencies]
soul-audio = { workspace = true, optional = true }

thiserror = { workspace = true }
serde = { workspace = true }
rand = "0.8"

[features]
default = ["effects"]
effects = ["soul-audio"]

[dev-dependencies]
proptest = "1.4"

[lib]
name = "soul_playback"
path = "src/lib.rs"
