[package]
name = "soul-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
soul-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
