[package]
name = "soul-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
soul-core.workspace = true
soul-storage.workspace = true
soul-importer.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v4"] }
reqwest.workspace = true

[lints]
workspace = true
